[gd_scene load_steps=127 format=2]

[ext_resource path="res://Code/Amigo.gd" type="Script" id=1]
[ext_resource path="res://Code/CuerpoA.gd" type="Script" id=2]
[ext_resource path="res://assets/Sprite Asesino/ataqueA/ataqueA1.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprite Asesino/ataqueA/ataqueA2.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprite Asesino/ataqueA/ataqueA3.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprite Asesino/ataqueA/ataqueA4.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprite Asesino/ataqueA/ataqueA5.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprite Asesino/ataqueA/ataqueA6.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprite Asesino/ataqueA/ataqueA7.png" type="Texture" id=9]
[ext_resource path="res://assets/Sprite Arquero/AtkCuerpo/Atk1.png" type="Texture" id=10]
[ext_resource path="res://assets/Sprite Arquero/AtkCuerpo/Atk2.png" type="Texture" id=11]
[ext_resource path="res://assets/Sprite Arquero/AtkCuerpo/Atk3.png" type="Texture" id=12]
[ext_resource path="res://assets/Sprite Arquero/AtkCuerpo/Atk4.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprite Arquero/AtkCuerpo/Atk5.png" type="Texture" id=14]
[ext_resource path="res://assets/Sprite Arquero/AtkCuerpo/Atk6.png" type="Texture" id=15]
[ext_resource path="res://assets/Sprite Nordico/Muerte/Nordico1.png" type="Texture" id=16]
[ext_resource path="res://assets/Sprite Nordico/Muerte/Nordico2.png" type="Texture" id=17]
[ext_resource path="res://assets/Sprite Nordico/Muerte/Nordico3.png" type="Texture" id=18]
[ext_resource path="res://assets/Sprite Nordico/Muerte/Nordico4.png" type="Texture" id=19]
[ext_resource path="res://assets/Sprite Nordico/Muerte/Nordico5.png" type="Texture" id=20]
[ext_resource path="res://assets/Sprite Nordico/Muerte/Nordico6.png" type="Texture" id=21]
[ext_resource path="res://assets/Sprite Arquero/1.png" type="Texture" id=22]
[ext_resource path="res://assets/Sprite Arquero/2.png" type="Texture" id=23]
[ext_resource path="res://assets/Sprite Arquero/3.png" type="Texture" id=24]
[ext_resource path="res://assets/Sprite Arquero/4.png" type="Texture" id=25]
[ext_resource path="res://assets/Sprite Arquero/5.png" type="Texture" id=26]
[ext_resource path="res://assets/Sprite Arquero/6.png" type="Texture" id=27]
[ext_resource path="res://assets/Sprite Arquero/7.png" type="Texture" id=28]
[ext_resource path="res://assets/Sprite Arquero/8.png" type="Texture" id=29]
[ext_resource path="res://assets/Sprite Arquero/9.png" type="Texture" id=30]
[ext_resource path="res://assets/Sprite Arquero/10.png" type="Texture" id=31]
[ext_resource path="res://assets/Sprite Arquero/11.png" type="Texture" id=32]
[ext_resource path="res://assets/Sprite Arquero/12.png" type="Texture" id=33]
[ext_resource path="res://assets/Sprite Arquero/13.png" type="Texture" id=34]
[ext_resource path="res://assets/Sprite Arquero/14.png" type="Texture" id=35]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 1.png" type="Texture" id=36]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 2.png" type="Texture" id=37]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 3.png" type="Texture" id=38]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 4.png" type="Texture" id=39]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 5.png" type="Texture" id=40]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 6.png" type="Texture" id=41]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 7.png" type="Texture" id=42]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 8.png" type="Texture" id=43]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 9.png" type="Texture" id=44]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 10.png" type="Texture" id=45]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 11.png" type="Texture" id=46]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 12.png" type="Texture" id=47]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 13.png" type="Texture" id=48]
[ext_resource path="res://assets/Sprite Asesino/Assesino corre 14.png" type="Texture" id=49]
[ext_resource path="res://assets/Sprite Asesino/Muerte/mueriendo1.png" type="Texture" id=50]
[ext_resource path="res://assets/Sprite Asesino/Muerte/mueriendo2.png" type="Texture" id=51]
[ext_resource path="res://assets/Sprite Asesino/Muerte/mueriendo3.png" type="Texture" id=52]
[ext_resource path="res://assets/Sprite Asesino/Muerte/mueriendo4.png" type="Texture" id=53]
[ext_resource path="res://assets/Sprite Asesino/Muerte/mueriendo5.png" type="Texture" id=54]
[ext_resource path="res://assets/Sprite Asesino/Muerte/mueriendo6.png" type="Texture" id=55]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico1.png" type="Texture" id=56]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico2.png" type="Texture" id=57]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico3.png" type="Texture" id=58]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico4.png" type="Texture" id=59]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico5.png" type="Texture" id=60]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico6.png" type="Texture" id=61]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico7.png" type="Texture" id=62]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico8.png" type="Texture" id=63]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico9.png" type="Texture" id=64]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico10.png" type="Texture" id=65]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico11.png" type="Texture" id=66]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico12.png" type="Texture" id=67]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico13.png" type="Texture" id=68]
[ext_resource path="res://assets/Sprite Nordico/Corriendo/Nordico14.png" type="Texture" id=69]
[ext_resource path="res://assets/Sprite Arquero/Muerte/Archer1.png" type="Texture" id=70]
[ext_resource path="res://assets/Sprite Arquero/Muerte/Archer2.png" type="Texture" id=71]
[ext_resource path="res://assets/Sprite Arquero/Muerte/Archer3.png" type="Texture" id=72]
[ext_resource path="res://assets/Sprite Arquero/Muerte/Archer4.png" type="Texture" id=73]
[ext_resource path="res://assets/Sprite Arquero/Muerte/Archer5.png" type="Texture" id=74]
[ext_resource path="res://assets/Sprite Arquero/Muerte/Archer6.png" type="Texture" id=75]
[ext_resource path="res://assets/Sprite Caballero/Muerte/caballero1.png" type="Texture" id=76]
[ext_resource path="res://assets/Sprite Caballero/Muerte/caballero2.png" type="Texture" id=77]
[ext_resource path="res://assets/Sprite Caballero/Muerte/caballero3.png" type="Texture" id=78]
[ext_resource path="res://assets/Sprite Caballero/Muerte/caballero4.png" type="Texture" id=79]
[ext_resource path="res://assets/Sprite Caballero/Muerte/caballero5.png" type="Texture" id=80]
[ext_resource path="res://assets/Sprite Caballero/Atk/caballero1.png" type="Texture" id=81]
[ext_resource path="res://assets/Sprite Caballero/Atk/caballero2.png" type="Texture" id=82]
[ext_resource path="res://assets/Sprite Caballero/Atk/caballero3.png" type="Texture" id=83]
[ext_resource path="res://assets/Sprite Caballero/Atk/caballero4.png" type="Texture" id=84]
[ext_resource path="res://assets/Sprite Caballero/Atk/caballero5.png" type="Texture" id=85]
[ext_resource path="res://assets/Sprite Caballero/Atk/caballero6.png" type="Texture" id=86]
[ext_resource path="res://assets/Sprite Caballero/Atk/caballero7.png" type="Texture" id=87]
[ext_resource path="res://assets/Sprite Caballero/Atk/caballero8.png" type="Texture" id=88]
[ext_resource path="res://assets/Sprite Caballero/Atk/caballero9.png" type="Texture" id=89]
[ext_resource path="res://assets/Sprite Asesino/Distancia/assassin1.png" type="Texture" id=90]
[ext_resource path="res://assets/Sprite Asesino/Distancia/assassin2.png" type="Texture" id=91]
[ext_resource path="res://assets/Sprite Asesino/Distancia/assassin3.png" type="Texture" id=92]
[ext_resource path="res://assets/Sprite Asesino/Distancia/assassin4.png" type="Texture" id=93]
[ext_resource path="res://assets/Sprite Asesino/Distancia/assassin5.png" type="Texture" id=94]
[ext_resource path="res://assets/Sprite Asesino/Distancia/assassin6.png" type="Texture" id=95]
[ext_resource path="res://assets/Sprite Arquero/Distancia/Archer1.png" type="Texture" id=96]
[ext_resource path="res://assets/Sprite Arquero/Distancia/Archer2.png" type="Texture" id=97]
[ext_resource path="res://assets/Sprite Arquero/Distancia/Archer3.png" type="Texture" id=98]
[ext_resource path="res://assets/Sprite Arquero/Distancia/Archer4.png" type="Texture" id=99]
[ext_resource path="res://assets/Sprite Arquero/Distancia/Archer5.png" type="Texture" id=100]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero1.png" type="Texture" id=101]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero2.png" type="Texture" id=102]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero3.png" type="Texture" id=103]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero4.png" type="Texture" id=104]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero5.png" type="Texture" id=105]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero6.png" type="Texture" id=106]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero7.png" type="Texture" id=107]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero8.png" type="Texture" id=108]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero9.png" type="Texture" id=109]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero10.png" type="Texture" id=110]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero11.png" type="Texture" id=111]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero12.png" type="Texture" id=112]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero13.png" type="Texture" id=113]
[ext_resource path="res://assets/Sprite Caballero/Corriendo/caballero14.png" type="Texture" id=114]
[ext_resource path="res://assets/Sprite Nordico/Atk/Nordico1.png" type="Texture" id=115]
[ext_resource path="res://assets/Sprite Nordico/Atk/Nordico2.png" type="Texture" id=116]
[ext_resource path="res://assets/Sprite Nordico/Atk/Nordico3.png" type="Texture" id=117]
[ext_resource path="res://assets/Sprite Nordico/Atk/Nordico4.png" type="Texture" id=118]
[ext_resource path="res://assets/Sprite Nordico/Atk/Nordico5.png" type="Texture" id=119]
[ext_resource path="res://assets/Sprite Nordico/Atk/Nordico6.png" type="Texture" id=120]
[ext_resource path="res://assets/Sprite Nordico/Atk/Nordico7.png" type="Texture" id=121]
[ext_resource path="res://assets/Sprite Nordico/Atk/Nordico8.png" type="Texture" id=122]
[ext_resource path="res://assets/Sprite Nordico/Atk/Nordico9.png" type="Texture" id=123]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.3419, 26.1984 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "asesinoAtk",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "arqueroAtk",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "nordicoMuerte",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": true,
"name": "arqueroCorriendo",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "asesinoCorriendo",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ) ],
"loop": true,
"name": "asesinoMuerte",
"speed": 5.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ) ],
"loop": true,
"name": "nordicoCorriendo",
"speed": 5.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ) ],
"loop": true,
"name": "arqueroMuerte",
"speed": 5.0
}, {
"frames": [ ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ) ],
"loop": true,
"name": "caballeroMuerte",
"speed": 5.0
}, {
"frames": [ ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ) ],
"loop": true,
"name": "caballeroAtk",
"speed": 5.0
}, {
"frames": [ ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ) ],
"loop": true,
"name": "asesinoDistancia",
"speed": 5.0
}, {
"frames": [ ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ) ],
"loop": true,
"name": "arqueroDistancia",
"speed": 5.0
}, {
"frames": [ ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ) ],
"loop": true,
"name": "caballeroCorriendo",
"speed": 5.0
}, {
"frames": [ ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ) ],
"loop": true,
"name": "nordicoAtk",
"speed": 5.0
} ]

[sub_resource type="RayShape2D" id=3]
length = 300.0

[node name="Amigo" type="Node2D"]
z_index = 30
script = ExtResource( 1 )

[node name="CuerpoA" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CuerpoA"]
z_index = 10
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="CuerpoA"]
z_index = 9
frames = SubResource( 2 )
animation = "nordicoMuerte"
frame = 5
speed_scale = 2.0
playing = true

[node name="Time_flechas" type="Timer" parent="CuerpoA"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Time_daga" type="Timer" parent="CuerpoA"]
one_shot = true
autostart = true

[node name="Atk" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atk"]
position = Vector2( 29.8086, 0.800262 )
rotation = 4.71239
shape = SubResource( 3 )
[connection signal="area_entered" from="CuerpoA" to="CuerpoA" method="_on_Cuerpo_area_entered"]
[connection signal="area_exited" from="CuerpoA" to="CuerpoA" method="_on_Cuerpo_area_exited"]
[connection signal="timeout" from="CuerpoA/Time_flechas" to="CuerpoA" method="_on_Timer_timeout"]
[connection signal="timeout" from="CuerpoA/Time_daga" to="CuerpoA" method="_on_Time_daga_timeout"]
[connection signal="area_entered" from="Atk" to="CuerpoA" method="_on_Atk_area_entered"]
[connection signal="area_exited" from="Atk" to="CuerpoA" method="_on_Atk_area_exited"]
